--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,29 +1,159 @@
 .footer {
-  padding:rem(56px) 0 rem(104px); background-color: #fff;
-  .logo-img{
-    margin-top:rem(22px); width: rem(265px); height:rem(41px);
-    background: url(../images/footer-logo-265x41-3x.png) no-repeat top center;
-    background-size: 100% auto;
-  }
-  .dropdown{
-    width:rem(280px);
-    .btn.dropdown-toggle{
-      width:100%; height: rem(60px); border-radius: rem(13px);
-      font-family: "Apple SD Gothic Neo"; font-size: rem(18px); font-weight: bold; color:#fff;
-      background:#989898 url(../images/ico-outlinkopen-21x22-3x.png) no-repeat right 15px center; background-size: rem(21px) auto;
-      &:focus, &:active{color:#ffffff; background:#242424 url(../images/ico-outlinkclose-19x20-3x.png) no-repeat right 15px center; background-size: rem(19px) auto;}
+  // font-family: "NanumSquare";
+  &__header {
+    display: flex;
+    justify-content: center;
+    background-color: #0c0c0c;
+    &__content {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      max-width: rem(1260px);
+      padding: 1rem 0;
     }
-    .dropdown-menu{width:100%; border-radius: rem(13px); border:1px solid #e1e1e1; box-shadow: 1px 5px 10px rgba(#000000, 0.1);}
   }
-  p{margin-top:rem(38px); line-height: rem(20px); font-family: "Noto Sans KR"; color:#989898; }
-  .nav{
-    margin-top:rem(65.4px);
-    li + li{
-      position: relative; padding-left:rem(22px);
+  &__container {
+    opacity: 0.76;
+    background-color: #0c0c0c;
+    &__content {
+      max-width: rem(1260px);
+      margin: 0 auto;
+      padding: 0 0 rem(136px) 0;
     }
-    a{font-size: rem(18px); color:#989898;}
   }
-  .copyright {float: left; color: #6e757f; line-height: 1; letter-spacing: -0.05rem;}
+  &__link {
+    margin-left: 51px;
+    font-size: 16px;
+    color: #e8e6e8;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+  &__dropdown {
+    flex: none;
+    margin-left: auto;
+    .button {
+      &.dropdown-toggle {
+        padding-right: 1.25rem;
+        background-size: 2rem;
+        background-image: url(../../images/renewal/ico-acc-open@3x.png);
+        &:after {
+          display: none;
+        }
+      }
+    }
+  }
+  &__txt {
+    margin-top: rem(32px);
+    font-size: rem(16px);
+    line-height: rem(24px);
+    color: #989898;
+  }
+  .logo-img {
+    margin-top: rem(60px);
+    width: 100%;
+    height: rem(30px);
+    background-position: 0 0;
+    background-size: contain;
+    background-image: url(../images/renewal/logo-hanbiz@3x.png);
+    background-repeat: no-repeat;
+  }
+  .dropdown {
+    width: rem(300px);
+    .btn.dropdown-toggle {
+      width: 100%;
+      height: rem(60px);
+      border-radius: rem(4px);
+      font-size: rem(18px);
+      color: #fff;
+      background: #989898 url(../images/ico-outlinkopen-21x22-3x.png) no-repeat
+        right 15px center;
+      background-size: rem(21px) auto;
+      &:focus,
+      &:active {
+        color: #ffffff;
+        background: #242424 url(../images/ico-outlinkclose-19x20-3x.png)
+          no-repeat right 15px center;
+        background-size: rem(19px) auto;
+      }
+    }
+    .dropdown-menu {
+      width: 100%;
+      border-radius: rem(13px);
+      border: 1px solid #e1e1e1;
+      box-shadow: 1px 5px 10px rgba(#000000, 0.1);
+    }
+  }
+  .dropdown-menu {
+    padding: 0;
+  }
+  .dropdown-item {
+    padding: rem(18px) rem(20px) rem(18px) rem(24px);
+    &:after {
+      margin-left: rem(27px);
+      display: inline-block;
+      width: rem(20px);
+      height: rem(20px);
+      vertical-align: middle;
+      background-position: 50% 50%;
+      background-size: cover;
+      background-image: url(../images/renewal/ico-more-view@3x.png);
+      background-repeat: no-repeat;
+      content: "";
+    }
+  }
 }
 
+@media (max-width: 767.98px) {
+  // Footer
+  .footer {
+    &__header {
+      &__content {
+        padding: rem(24px) rem(20px) rem(16px) rem(20px);
+      }
+    }
+    &__link {
+      margin-left: rem(24px);
+      font-size: rem(12px);
+    }
+    &__container {
+      &__content {
+        padding: 0 rem(20px) 80px rem(20px);
+      }
+    }
+  }
+}
 
+// Footer
+.footer {
+  // padding: 0;
+  .footer__dropdown {
+    .button {
+      &.dropdown-toggle {
+        padding-right: 2.5rem;
+        background-size: 2rem;
+        background-image: url(../../images/renewal/ico-acc-open@3x.png);
+        &:after {
+          display: none;
+        }
+      }
+    }
+  }
+  .button {
+    &.dropdown-toggle {
+      width: 100%;
+      height: 2rem;
+      font-size: 1rem;
+      // font-weight: bold;
+      color: #ffffff;
+      background-position: 100% 50%;
+      background-size: 2rem;
+      background-image: url(../images/renewal/ico-acc-open@3x.png);
+      background-repeat: no-repeat;
+      &:focus,
+      &:active {
+        background-image: url(../images/ico-outlinkclose-19x20-3x.png);
+      }
+    }
+  }
+}
