--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,10 +1,10 @@
 html{font-size: 16px;}
-@include media-breakpoint-down(lg) {
-  html{font-size: 15px;}
-}
-@include media-breakpoint-down(md) {
-  html{font-size: 14px;}
-}
+// @include media-breakpoint-down(lg) {
+//   html{font-size: 15px;}
+// }
+// @include media-breakpoint-down(md) {
+//   html{font-size: 14px;}
+// }
 
 
 a:hover{text-decoration: none;}
