*  상단 GNB 스타일 (임시 주석 처리 코드 정리 예정) *  변수 primary 컬러 변경 (수정 맟 종라 예정)

--- a/scss/_contents.scss
+++ b/scss/_contents.scss
@@ -4,7 +4,7 @@
 }
 .logo-img{
   display: inline-block; width: rem(180px); height:rem(30px);
-  background: url(../images/hanpass-logo-181x30-fff-3x.png) no-repeat top center; background-size: 100% auto;
+  background: url(../images/renewal/logo-hanbiz@3x.png) no-repeat top center; background-size: 100% auto;
   text-indent: -99999999px;
 }
 .ico-map{
