--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,10 @@
 // Variables
 
+// cop
+$primary: #1e4ba3;
+
 // Override Bootstrap primary and secondary colors
-$primary: #476eff !default;
+// $primary: #476eff !default;
 $secondary: #141414 !default;
 $dark: #141414 !default;
 $light: #989898 !default;
