--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -222,6 +222,42 @@
     margin-left: rem(30px);
   }
 }
+.left-nav {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  min-width: 0;
+  height: calc(100vh - 95px);
+  margin-left: -11.25rem;
+  word-wrap: break-word;
+  background-clip: border-box;
+  transition: all 1s ease 0s;
+  ul {
+    li {
+      margin-bottom: rem(20px);
+      padding: 0;
+      text-align: left;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &.active {
+        margin-bottom: rem(30px);
+        span {
+          font-size: rem(24px);
+          text-decoration: underline;
+          opacity: 1;
+        }
+      }
+      span {
+        font-size: rem(20px);
+        font-weight: 700;
+        color: #000;
+        opacity: 0.41;
+      }
+    }
+  }
+}
 .exchange-calc {
   // display: none;
   position: absolute;
@@ -800,7 +836,6 @@
     height: auto;
   }
   .fullpage-wrapper {
-    // margin-top: rem(75px);
     margin-top: rem(60px);
   }
   .fullpage-wrapper .section:not(.main-visual) .container-fluid {
@@ -817,6 +852,8 @@
       flex: 1;
       width: 100%;
       height: auto;
+      // max-height: rem(360px);
+      max-height: 63%;
       margin-bottom: 80px;
     }
     .cont-box {
